# b3

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  main.cpp  readfile.cpp  readme.md  removeLog.sh  run.sh  stop.sh
b3_market_data/: AggressorSide.h  ApplVerID.h  AuctionImbalance_19.h  Boolean.h  ChannelReset_11.h  ClosingPrice_17.h  DeleteOrder_MBO_51.h  EmptyBook_9.h  ExecutionStatistics_56.h  ExecutionSummary_55.h  ExerciseStyle.h  Fixed8.h  ForwardTrade_54.h  FramingHeader.h  GovernanceIndicator.h  GroupSizeEncoding.h  HeaderMessage_0.h  HighPrice_24.h  ImbalanceCondition.h  ImpliedMarketIndicator.h  InstrAttribType.h  InstrAttribValue.h  LastTradePrice_27.h  LotType.h  LowPrice_25.h  MDEntryType.h  MDUpdateAction.h  MassDeleteOrders_MBO_52.h  MatchEventIndicator.h  MaturityMonthYear.h  MessageHeader.h  MessageType.h  MultiLegModel.h  MultiLegPriceMethod.h  NewsSource.h  News_5.h  OpenCloseSettlFlag.h  OpenInterest_29.h  OpeningPrice_15.h  Order_MBO_50.h  (+42 more)
config/: 1_InstrumentDefinition.json  2_SnapshotsRecovery.json  3_Incremental.json  4_IncrementalBak.json  5_Channel_80.json  B3.json  Channel_3.json  Channel_4.json  Channel_80.json  Channel_all.json  Channel_dr.json  Channel_eq.json  Incrementals.json  Incrementals_eqt.json  Incrementals_eqt_cert.json  Monitor.json  b3-market-data-messages-1.9.0.xml  test.json
inc/: B3Market.hpp  Channel.h  ConcurrentQueue.hpp  DataProcessor.hpp  HandlerData.hpp  LargeFileReader.hpp  MulticastConfig.hpp  MulticastReceiver.hpp  SignalHandler.hpp  SocketWrapper.h  b3struct.hpp  basestrcut.hpp  logger.hpp  std.hpp  utils.hpp  xml.hpp
src/: B3Market.cpp  Channel.cpp  DataProcessor.cpp  HandlerData.cpp  Logger.cpp  MulticastConfig.cpp  MulticastReceiver.cpp  SignalHandler.cpp  SocketWrapper.cpp  utils.cpp
